[gd_scene load_steps=3 format=3 uid="uid://du5mht80p2tkk"]

[ext_resource type="Theme" uid="uid://di4h7o0l41s3u" path="res://theme.tres" id="1_ehata"]
[ext_resource type="Script" uid="uid://k8pg3cv0w81b" path="res://autoloads/debug_menu.gd" id="1_gkmjo"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 100

[node name="DebugMenu" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("1_ehata")
script = ExtResource("1_gkmjo")

[node name="Panel" type="Panel" parent="DebugMenu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 522.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="Label" parent="DebugMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "~ DEBUG MENU ~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quitwosave" type="Button" parent="DebugMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "quit without saving"

[node name="save" type="Button" parent="DebugMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVE GAME"

[node name="killyourself" type="Button" parent="DebugMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Kill Yourself"

[node name="clearsave" type="Button" parent="DebugMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "clear save"

[node name="dashbutton" type="CheckButton" parent="DebugMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Has Roll?"

[node name="wjbutton" type="CheckButton" parent="DebugMenu/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Has Wall Jump?"

[connection signal="pressed" from="DebugMenu/Panel/VBoxContainer/quitwosave" to="DebugMenu" method="_on_quitwosave_pressed"]
[connection signal="pressed" from="DebugMenu/Panel/VBoxContainer/save" to="DebugMenu" method="_on_save_pressed"]
[connection signal="pressed" from="DebugMenu/Panel/VBoxContainer/killyourself" to="DebugMenu" method="_on_killyourself_pressed"]
[connection signal="pressed" from="DebugMenu/Panel/VBoxContainer/clearsave" to="DebugMenu" method="_on_clearsave_pressed"]
[connection signal="toggled" from="DebugMenu/Panel/VBoxContainer/dashbutton" to="DebugMenu" method="_on_dashbutton_toggled"]
[connection signal="toggled" from="DebugMenu/Panel/VBoxContainer/wjbutton" to="DebugMenu" method="_on_wjbutton_toggled"]
